cursive-bootstrap/tests/ui/E-SEM/E-SEM-2534.cursive
// RUN: compile-fail
// DIAG: E-SEM-2534
// SPEC: 8.17
// DESC: move argument required but not provided

record Resource {
    value: i32
}

procedure consume(move r: Resource) -> i32 {
    return r.value
}

procedure call_without_move() -> i32 {
    let r: Resource = Resource { value: 42 }
    return consume(r)  //~ ERROR E-SEM-2534: move argument required
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
